Manage correctly xalign for label
review12361002

--- a/src/sao.less
+++ b/src/sao.less
@@ -101,7 +101,6 @@ body {
         width: 100%;
     }
     & td.form-label {
-        text-align: right;
         white-space: nowrap;
     }
     & .form-many2one, .form-date, .form-binary, .form-reference {
